--- a/WebApp/src/app/calculator/house-loan-calculator/house-loan-calculator-form/house-loan-calculator-form.component.html
+++ b/WebApp/src/app/calculator/house-loan-calculator/house-loan-calculator-form/house-loan-calculator-form.component.html
@@ -4,7 +4,7 @@
     <div class="p-mx-3 p-col-12 p-md-6 p-xl-3">
       <label class="p-col-12">Loan amount: </label>
       <p-inputNumber [(ngModel)]="val" [showButtons]="true" class="p-col-12 p-md-8" buttonLayout="horizontal" inputId="horizontal" spinnerMode="horizontal" [step]="10000"
-                     decrementButtonClass="p-button-secondary" [min]="1000" incrementButtonClass="p-button-success" incrementButtonIcon="pi pi-plus" decrementButtonIcon="pi pi-minus" mode="currency" currency="EUR">
+                     decrementButtonClass="p-button-secondary"  incrementButtonClass="p-button-success" incrementButtonIcon="pi pi-plus" decrementButtonIcon="pi pi-minus" mode="currency" currency="EUR">
       </p-inputNumber>
     </div>
     <div class="p-mx-3 p-col-12 p-md-6 p-xl-3">
