--- a/WebApp/src/styles.scss
+++ b/WebApp/src/styles.scss
@@ -1,3 +1,9 @@
 body{
   background-color: #f8f9fa;
 }
+.section-title{
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+  color: #495057;
+}
