--- a/WebApp/src/app/calculator/house-loan-calculator/house-loan-amortization-schedule/house-loan-amortization-schedule.component.html
+++ b/WebApp/src/app/calculator/house-loan-calculator/house-loan-amortization-schedule/house-loan-amortization-schedule.component.html
@@ -8,6 +8,7 @@
          styleClass="p-datatable-striped p-datatable-gridlines"
          [showCurrentPageReport]="true"
          [responsive]="true"
+         selectionMode="single"
          currentPageReportTemplate="Showing {first} to {last} of {totalRecords} installments"
 >
   <ng-template pTemplate="header" let-columns>
@@ -18,12 +19,26 @@
     </tr>
   </ng-template>
 
-  <ng-template pTemplate="body" let-installment let-i="rowIndex">
-    <tr>
+  <ng-template pTemplate="body" let-installment>
+    <tr *ngIf="!isLoading">
       <td>{{installment.installmentDate | date: 'MMM yyyy'}}</td>
       <td>{{installment.principal | currency : 'EUR'}}</td>
       <td>{{installment.interest | currency : 'EUR'}}</td>
       <td>{{installment.payment | currency : 'EUR'}}</td>
+    </tr>
+    <tr *ngIf="isLoading">
+      <td>
+        <p-skeleton></p-skeleton>
+      </td>
+      <td>
+        <p-skeleton></p-skeleton>
+      </td>
+      <td>
+        <p-skeleton></p-skeleton>
+      </td>
+      <td>
+        <p-skeleton></p-skeleton>
+      </td>
     </tr>
   </ng-template>
 </p-table>
