Last changes to the UI

--- a/WebApp/src/app/calculator/house-loan-calculator/house-loan-amortization-schedule/house-loan-amortization-schedule.component.scss
+++ b/WebApp/src/app/calculator/house-loan-calculator/house-loan-amortization-schedule/house-loan-amortization-schedule.component.scss
@@ -1,7 +1,7 @@
 :host ::ng-deep .p-datatable .p-datatable-thead > tr > th {
   position: -webkit-sticky;
   position: sticky;
-  top: 5px;
+  top: 0vh;
   background: #e6e9ed;
 }
 
