--- a/WebApp/src/app/calculator/house-loan-calculator/house-loan-amortization-schedule/house-loan-amortization-schedule.component.html
+++ b/WebApp/src/app/calculator/house-loan-calculator/house-loan-amortization-schedule/house-loan-amortization-schedule.component.html
@@ -7,7 +7,7 @@
          styleClass="p-datatable-striped p-datatable-gridlines"
          [showCurrentPageReport]="true"
          [responsive]="true"
-         selectionMode="single"
+         [selectionMode]="!isLoading? 'single':  null"
          currentPageReportTemplate="Showing {first} to {last} of {totalRecords} installments"
 >
   <ng-template pTemplate="header" let-columns>
