--- a/WebApp/src/app/calculator/house-loan-calculator/house-loan-calculation-overview/house-loan-calculation-overview.component.html
+++ b/WebApp/src/app/calculator/house-loan-calculator/house-loan-calculation-overview/house-loan-calculation-overview.component.html
@@ -1,13 +1,13 @@
 <p-card header="Calculation results">
   <div class="p-grid">
     <ngx-charts-advanced-pie-chart
-      [view]="view"
-      [scheme]="colorScheme"
       [results]="values"
+      [scheme]="colorScheme"
+      [view]="view"
     >
     </ngx-charts-advanced-pie-chart>
     <div class="p-col-6">
-      <h3> Estimated payoff Date </h3>
+      <h3> Estimated Payoff Date </h3>
       <div>
         {{estimatedPayoffDate | date : 'MMM dd, yyyy'}}
       </div>
